--- a/ecotech2/pom.xml
+++ b/ecotech2/pom.xml
@@ -8,10 +8,10 @@
 		<version>2.6.1</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>ecotech</groupId>
-	<artifactId>ecotech2</artifactId>
+	<groupId>com.tcc.inf2fm</groupId>
+	<artifactId>myproject2f</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>demo</name>
+	<name>myproject2f</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
 		<java.version>17</java.version>
